--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: whitesmoke;  
+}
+::-webkit-scrollbar {
+  width: 0; /* Make the scrollbar invisible */
 }
 
 code {
