--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -5,13 +5,13 @@
     justify-content: center;
     height:35vh;
     /**background-image: url(../assets/Campus_Aerial_View_2_blurry.jpeg);**/
-    background-color: #121619;
-   
-    padding-top: 100px;
-    padding-bottom: 100px;
+    background-color: #1d2328;
+    padding-top: 10vh;
     
  }
- 
+ .ContactPage{
+    background-color:whitesmoke; 
+ }
  h1{
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     padding-bottom: 3vh;
@@ -24,12 +24,12 @@
     padding-left:20vw;
     line-height: 1px;
     padding-top: 3vh;
+    color: #1d2328;
 }
 
 .nameInput{
     padding-left: 20vw;
     padding-bottom: 3vh;
-
 } 
 
 .custom-input{
@@ -41,7 +41,7 @@
     width: 50vw;
     /* Additional styles */
     background-color: #f7f7f7;
-    color: #333;    
+    color: #121619;     
 } 
 
 .emailInput{
@@ -66,14 +66,15 @@
 
 .button{
     
-    border: 2px solid #ccc;
+    border: 2px solid #121619;
     border-radius: 5px;
     font-size: 16px;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     width: 10vw;
+    height: 3vw;
     /* Additional styles */
     background-color: #f7f7f7;
-    color: #333;
+    color: #121619; 
     
 }
 
