--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -2,9 +2,10 @@
     width: 100%;
     height: 10vh;
     /** background-color: whitesmoke; **/
-    background-color: #121619;
+    background-color: whitesmoke;
     display: flex;
     position: fixed;
+    border-bottom:  3px solid #1d2328 ;
     flex-direction: row;
     z-index: 1000;
    
@@ -38,10 +39,10 @@
   }
   
   .navbar a {
-    color: whitesmoke;
+    color: #1d2328;
     text-decoration: none;
     margin: 20px;
-    font-weight:520;
+    font-weight:540;
     font-size: larger;
   }
   
