--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,12 +1,11 @@
 .footer {
     width: 100%;
     height: 20vh;
-    background-color: #121619;
+    background-color: #1d2328;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: left;
     padding-top: 10px;
     border-top: 3px solid whitesmoke;
 
