--- a/src/styles/Donate.css
+++ b/src/styles/Donate.css
@@ -1,4 +1,4 @@
-.ContactContainer{
+.HeaderContainer{
     display:flex;
     flex-direction: column;
     align-items:center;
@@ -8,65 +8,46 @@
     background-color: #1d2328;
     padding-top: 10vh;
     
- }
-.ContactPage{
+}
+
+.DonateContainer{
+    display:flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content: center;
+    height:35vh;
+    /**background-image: url(../assets/Campus_Aerial_View_2_blurry.jpeg);**/
+    background-color: whitesmoke;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    
+}
+.DonatePage{
     background-color:whitesmoke; 
- }
-.ContactContainer h1{
+}
+
+.HeaderContainer h1{
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     padding-bottom: 3vh;
-    padding-left: 0vw;
     text-align: center;
     color:whitesmoke;
-  
 }
-.ContactContainer h2{
+
+.DonateContainer h2{
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    padding-left: 20vw;
+    padding-left:0vw;
     line-height: 1px;
     padding-top: 3vh;
     color: #1d2328;
 }
 
-.nameInput{
-    padding-left: 20vw;
-    padding-bottom: 3vh;
-} 
-
-.custom-input{
-    padding: 10px;
-    border: 2px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    width: 50vw;
-    /* Additional styles */
-    background-color: #f7f7f7;
-    color: #121619;     
-} 
-
-.emailInput{
-    padding-left: 20vw;
-    padding-bottom: 3vh;
-} 
-
-.subjectInput{
-    padding-left: 20vw;
-    padding-bottom: 3vh;
-
-} 
-.messageInput{
-    padding-left: 20vw;
-    padding-bottom: 3vh;
-}
-.buttonContainer{
+.DonateContainer .buttonContainer{
     padding-top: 3vh;
-    padding-left: 20vw;
+    padding-left: 0vw;
     padding-bottom: 3vh;
 }
 
-.button{
-    
+.DonateContainer .button{
     border: 2px solid #121619;
     border-radius: 5px;
     font-size: 16px;
@@ -76,6 +57,6 @@
     /* Additional styles */
     background-color: #f7f7f7;
     color: #121619; 
-    
 }
+
 
