--- a/src/styles/TeamMember.css
+++ b/src/styles/TeamMember.css
@@ -14,6 +14,14 @@
     place-items: center;
     font-size: small;
 }
+
+.TeamMember img:hover{
+    opacity: 0.7;
+    /* transform: scale(1.025); */
+    filter:brightness(125%)
+    
+
+}
 .TeamMember .MemberDescriptor{
     position: absolute;
     top: 79%; /* Adjust top, left, width, height as needed */
