--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -3,8 +3,7 @@
     height: 20vh;
     background-color: #1d2328;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     padding-top: 10px;
     border-top: 3px solid whitesmoke;
@@ -30,4 +29,10 @@
   
 .footer p {
     color: white;
+}
+
+.left, .middle, .right{
+    flex: 1;
+    text-align: center;
+    color: whitesmoke;
 }
