--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -3,9 +3,9 @@
     flex-direction: column;
     align-items:center;
     justify-content: center;
-    height:35vh;
+    height:14vh;
     /**background-image: url(../assets/Campus_Aerial_View_2_blurry.jpeg);**/
-    background-color: #1d2328;
+    background-color: #1c3b7b;
     padding-top: 10vh;
     
  }
@@ -14,7 +14,7 @@
  }
 .ContactContainer h1{
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    padding-bottom: 3vh;
+    font-weight: 100;
     padding-left: 0vw;
     text-align: center;
     color:whitesmoke;
