--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -2,24 +2,24 @@
   width: 100%;
   height: 10vh;
   /** background-color: whitesmoke; **/
-  background-color: #1d2328 ;
+  background-color: #1c3b7b ;
   display: flex;
   position: fixed;
-  border-bottom:  3px solid #1d2328 ;
+  border-bottom:  3px solid whitesmoke;
   flex-direction: row;
   z-index: 1000;
 }
 
 .navbar h1 {
   color: whitesmoke;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
   
 .navbar .leftSide {
   flex: 50%;
   height: 100%;
   display: flex;
-  align-items: center;
-  padding-left: 100px;  
+  align-items: center;  
 }
   
 .navbar .leftSide img {
