--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,7 +1,7 @@
 .footer {
     width: 100%;
     height: 20vh;
-    background-color: #1d2328;
+    background-color: #1c3b7b;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -10,25 +10,31 @@
 
 }
 
-.footer .h1{
+.footer h1{
     color:whitesmoke;
-    text-align: left;
-    justify-content: left;
-    align-items: left;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 
   
 .socialMedia svg {
-    color: white;
+    color: whitesmoke;
     margin: 20px;
     font-size: 70px;
     cursor: pointer;
 
 }
+
+.socialMedia img{
+    width: 70px;
+    padding-bottom: 1.75vh;
+    padding-left: 20px;
+}
   
 .footer p {
-    color: white;
+    color: whitesmoke;
+    font-size: larger;
+    font-weight: lighter;
 }
 
 .left, .middle, .right{
