--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -9,9 +9,12 @@
   text-align: left;
   padding-left: 7.5vw;
   padding-right: 40vw;
+  font-weight: 50;
+  padding-bottom: 5vh;
   color:whitesmoke;
-  font-size: 50px;
-  font-weight: 100;
+  font-size: 40px;
+  
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   
 
 }
@@ -20,9 +23,9 @@
   flex-direction: column;
   align-items:center;
   justify-content: center;
-  height:40vh;
+  height:25vh;
   /**background-image: url(../assets/Campus_Aerial_View_2_blurry.jpeg);**/
-  background-color: #1d2328;
+  background-color: #1c3b7b;
   padding-bottom: 50px;
   
 
@@ -37,7 +40,7 @@
   width: 90vw;
   height: auto;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   place-items: center;
   font-size: large;
 
