font size adjusted home

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -47,8 +47,8 @@
     padding-left: 5vw;
     
     padding-right: 5vw;
-    font-size: 40px;
-    padding-top: 1vh;
+    font-size: 2vw;
+    padding-top: 3vh;
     color: #121619;
     
     text-align: center;
