--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -5,7 +5,7 @@
     justify-content: center;
     height:14vh;
     /**background-image: url(../assets/Campus_Aerial_View_2_blurry.jpeg);**/
-    background-color: #1c3b7b;
+    background-color: #0d1b38;
     padding-top: 10vh;
     
  }
