--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -2,10 +2,11 @@
   width: 100%;
   height: 10vh;
   /** background-color: whitesmoke; **/
-  background-color: #1c3b7b ;
+  background-color :#091225;
+  border-bottom: 1.5px ridge #e79671;
   display: flex;
   position: fixed;
-  border-bottom:  3px solid whitesmoke;
+
   flex-direction: row;
   z-index: 1000;
 }
