--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,30 +1,52 @@
+.projects{
+    background-color: #091225;
+}
 .projectsHeaderContainer {
     display:flex;
-    flex-direction: column;
-    align-items:center;
+    flex-direction: column;    
     justify-content: center;
-    height:15vh;
+    height:25vh;
     /**background-image: url(../assets/Campus_Aerial_View_2_blurry.jpeg);**/
-    background-color: #1c3b7b;
-    padding: 5vw;
+    background-color: #091225;
+    padding-top: 10vh;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     
 }
+.projectsHeaderContainer h2{
+    /**background-image: url(../assets/Campus_Aerial_View_2_blurry.jpeg);**/
+    padding-top: 12.5vh;
+    font-weight: lighter;
+    font-size: 40px;
+    text-align: center;
+    padding-left: 7.5vw;
+    color: whitesmoke;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
 .projectsFooterContainer {
     display:flex;
-    flex-direction: column;
-    align-items:center;
-    justify-content: center;
-    height:30vh;
+    flex-direction: row;
+    align-items:left;
+    justify-content: left;
+    height:40vh;
+    margin-left: 7.5vw;
+    margin-right: 7.5vw;
+    width: 85vw;
+    border-top: 1.5px solid #e79671;
+    border-bottom: 3px solid #e79671;
+    border-left: 3px solid #e79671;
+    
     /**background-image: url(../assets/Campus_Aerial_View_2_blurry.jpeg);**/
-    background-color: #1c3b7b;
-    padding: 5vw;
+    background-color: #091225;
+    margin-bottom: 10vh;
+    
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     
 }
 .projectsFooterContainer img{
-    width: 20vw;
-    padding: 5vh;
+    width: 40vh;
+    padding: 0vh;
+    
     
 }
 .projectsContentContainer {
@@ -33,28 +55,49 @@
     align-items:left;
     justify-content: left;
     height:50vh;
-    background-color: #1d2328;
-    padding-top: 5vh;
-    padding-bottom: 5vh;
+    width: 85vw;
+    background-color: #091225;
+    margin-left: 7.5vw;
+    margin-right: 7.5vw;
+    border-top: 3px solid #e79671;
+    border-bottom: 1.5px solid #e79671;
+    border-left: 3px solid #e79671;
+    
     
 }
-.projectsContentContainer h3{
-    
+.projectsContentContainer .pccLeft {
+    display:flex;
+    flex-direction: row;
+    align-items:left;
+    justify-content: left;
+    height:40vh;
+    width: 37.5;
+    background-color: #1c3b7b;
+}
+.projectsContentContainer .pccRight {
+    align-items:left;
+    text-align: left;
+    justify-content: left;
+    padding-left: 2.5vw;
+    height:40vh;
+    width: 40vw;
+   
+}
+.projectsContentContainer .pccLeft img{
+    width: 30vw;
+    height: 50vh;
+}
+.projectsContentContainer .pccRight h3{
     font-weight: lighter;
-    font-size: 26px;
-    padding-left: 5vw;
-    padding-right: 2vw;
+    font-size: 30px;
     color: whitesmoke;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;  
     text-align: left;
+    
 }
 
-.projectsContentContainer img{
-    
-    width: 45vw;
-    padding-right: 5vw;
-    
-}
+
+
 
 .projectsHeaderContainer img{
     width: 20vw;
@@ -73,6 +116,7 @@
     text-align: left;
     color: whitesmoke;
 }
+/***
 .projectsHeaderContainer .left-side {
     flex: 50%;
     height: 100%;
@@ -94,88 +138,17 @@
 }
 .projectsHeaderContainer .right-side h1 {
     font-size: 80px;
-    background-color: whitesmoke;
+   
     margin-top: 30vh;
     font-weight: lighter;
     color: whitesmoke;
 }
+***/
   
-  
-.projectsHeaderContainer button {
-    color: black;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    justify-content: center;
-    background-color: #121619;
-    height: 50px;
-    width: 180px;
-    color: white;
-    text-decoration: none;
-    font-size: 20px;
-}
-  
-.projectsHeaderContainer button:hover {
-    background-color: #07090a;
-    cursor: pointer;
-    transition: 0.3s ease-in;
-}
-  
-@media only screen and (max-width: 650px) {
-    .home {
-      justify-content: center;
-      align-items: center;
-    }
-  
-    .headerContainer {
-        margin-left: 0px;
-        border-radius: 10px;
-        padding: 10px;
-        width: 80%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        background-color: #121619;
-        color: white;
-    }
-  
-    .headerContainer h1 {
-        font-size: 40px;
-        height: 30px;
-        color: white;
-    }
-  
-    .headerContainer p {
-        font-size: 30px;
-        color: white;
-    }
-  
-    .headerContainer button {
-        background-color: white;
-        color: #121619;
-        margin-bottom: 30px;
-    }
-  
-    .headerContainer button:hover {
-        background-color: rgb(225, 225, 225);
-        color: #121619;
-    }
-}
 
-.image-container {
-    width: 25vw; 
-    height: auto; 
-    display: flex;
-    justify-content:left;
-    align-items: center;
-    overflow: hidden; 
-}
-
-
-.flex-image {
-    width: 100%; /* Makes the image take up the full width of its container */
-    height: auto; /* Allows the image to maintain its aspect ratio */
-    object-fit: cover; /* Ensures the image covers the entire container */
-}
   
+
+  
+
+  
+
