--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,12 +1,12 @@
 .footer {
     width: 100%;
     height: 20vh;
-    background-color: #1c3b7b;
+    background-color: #091225;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-top: 10px;
-    border-top: 3px solid whitesmoke;
+    border-top: 1.5px ridge #e79671;
 
 }
 
@@ -15,6 +15,21 @@
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+.footer .middle {
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+
+}
+.footer .middle .RWELogo img{
+    width: 175px;
+
+    padding-left: 20px;
+}
+.footer .middle .MAELogo img{
+    width: 75px;
+}
 
   
 .socialMedia svg {
@@ -25,11 +40,7 @@
 
 }
 
-.socialMedia img{
-    width: 70px;
-    padding-bottom: 1.75vh;
-    padding-left: 20px;
-}
+
   
 .footer p {
     color: whitesmoke;
@@ -40,5 +51,6 @@
 .left, .middle, .right{
     flex: 1;
     text-align: center;
+    flex-direction: row;
     color: whitesmoke;
 }
